--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=Publish.html" />
+    <meta http-equiv="refresh" content="0; url=published/Publish.html" />
     <title>Redirecionando...</title>
   </head>
   <body>
-    <p>Redirecionando para <a href="Publish.html">página de instalação</a></p>
+    <p>Redirecionando para <a href="published/Publish.html">página de instalação</a></p>
   </body>
 </html>
